--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@fontsource/roboto": "^5.0.8",
     "@mui/icons-material": "^5.15.9",
     "@mui/material": "^5.15.9",
-    "@mui/x-data-grid": "^6.19.4",
+    "@mui/x-data-grid": "^6.19.5",
+    "@reduxjs/toolkit": "^2.2.1",
     "@remix-run/node": "^2.7.2",
     "@remix-run/react": "^2.7.2",
     "@remix-run/serve": "^2.7.2",
@@ -24,12 +25,13 @@
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.0",
     "sort-by": "^1.2.0",
-    "tiny-invariant": "^1.3.1"
+    "tiny-invariant": "^1.3.2"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.7.2",
-    "@types/react": "^18.2.57",
+    "@types/react": "^18.2.58",
     "@types/react-dom": "^18.2.19",
     "@typescript-eslint/eslint-plugin": "^7.0.2",
     "@typescript-eslint/parser": "^7.0.2",
